add -XX java args to match launcher